# DefenderSociety

./: .gitignore  Dockerfile  README.md  docker-compose.yml  prod-entrypoint.sh
defender_society/: .env  Dockerfile  manage.py  prod-entrypoint.sh  pyproject.toml  uwsgi.ini
defender_society/apps/api/: views.py
defender_society/apps/blog/: admin.py  context_processors.py  feeds.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
defender_society/apps/blog/migrations/: 0001_initial.py  0002_auto_20210410_1824.py  0003_auto_20210420_0042.py
defender_society/apps/blog/static/blog/js/: base.js
defender_society/apps/blog/templatetags/: blog_tags.py
defender_society/apps/comment/: admin.py  apps.py  handlers.py  models.py  urls.py  views.py
defender_society/apps/comment/templatetags/: comment_tags.py
defender_society/apps/oauth/: admin.py  models.py  views.py
defender_society/apps/oauth/migrations/: 0001_initial.py
defender_society/apps/oauth/templatetags/: oauth_tags.py
defender_society/apps/tool/: admin.py  apps.py  models.py  urls.py  views.py
defender_society/apps/tool/migrations/: 0001_initial.py
defender_society/apps/tool/templatetags/: tool_tags.py
defender_society/defender_society/: helper.py  settings.py  urls.py  wsgi.py
defender_society/scripts/: entrypoint.sh
defender_society/templates/: 404.html
defender_society/templates/account/: base.html  login.html  signup.html
defender_society/templates/admin/: base.html
defender_society/whoosh_index/: MAIN_i7nd9j8ldsghwfav.seg  MAIN_zrukkruykvbvfz3w.seg  _MAIN_0.toc  _MAIN_2.toc
(+35 files in other folders)
